--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,17 @@
 			<groupId>io.pivotal.cfenv</groupId>
 			<artifactId>java-cfenv-boot</artifactId>
 			<version>1.0.0.RELEASE</version>
-		</dependency>		
+		</dependency>	
+		<dependency>
+        	<groupId>javax.json</groupId>
+        	<artifactId>javax.json-api</artifactId>
+        	<version>1.0</version>
+    	</dependency>
+    	<dependency>
+        	<groupId>org.glassfish</groupId>
+        	<artifactId>javax.json</artifactId>
+        	<version>1.0.4</version>
+    	</dependency>	
 	</dependencies>
 
 	<build>
